--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ samtools == 1.3.1
 bowtie2 == 2.2.9
 bammarkduplicates2 (biobaambam2) == 0.0.191
 bedtools == 2.26.0
-htseq-count == 0.6.1p1
+featureCounts == 1.5.1
 
 Python libraries    -   "multiqc == 0.9", "numpy == 1.7.0", "matplotlib == 1.5.3", "Jinja2 == 2.7.3", "MarkupSafe == 0.23", "multiqc == 0.8",
 R libraries         -   "dupRadar == 1.2.2", "Rsubread == 1.22.3"
